# ORbitGFX

./: .gitmodules  CMakeLists.txt  README.md
include/common/: assert.hpp  log.hpp
include/platform/dawn/: dawnCommon.hpp  dawnDevice.hpp  dawnEnums.hpp  dawnWindow.hpp
include/platform/dawn/frameworks/imgui/: dawnImguiRenderer.hpp  imgui_setup.h
include/platform/dawn/render/: dawnCommandBuffer.hpp  dawnPassRenderer.hpp  dawnRenderPassRenderer.hpp  dawnRenderer.hpp
include/platform/dawn/resources/: dawnBindGroup.hpp  dawnBindGroupLayout.hpp  dawnBuffer.hpp  dawnDynamicBuffer.hpp  dawnFrameBuffer.hpp  dawnRenderPass.hpp  dawnRenderPassLayout.hpp  dawnResourceManager.hpp  dawnSampler.hpp  dawnShader.hpp  dawnTexture.hpp
include/renderer/: device.hpp  enums.hpp  window.hpp
include/renderer/frameworks/imgui/: imguiRenderer.hpp
include/renderer/render/: commandBuffer.hpp  commands.hpp  drawStream.hpp  passRenderer.hpp  renderPassRenderer.hpp  renderer.hpp  uniforms.hpp
include/renderer/resources/: bindGroup.hpp  bindGroupLayout.hpp  buffer.hpp  dynamicBuffer.hpp  frameBuffer.hpp  renderPass.hpp  renderPassLayout.hpp  resourceManger.hpp  sampler.hpp  shader.hpp  texture.hpp
include/utilities/: MTRingBuffer.hpp  handle.hpp  pool.hpp  span.hpp  workQueue.hpp
src/common/: log.cpp
src/platform/dawn/: dawnDevice.cpp  dawnEnums.cpp  dawnWindow.cpp
src/platform/dawn/frameworks/imgui/: dawnImguiRenderer.cpp  imgui_impl_glfw.cpp  imgui_impl_wgpu.cpp  imgui_setup.cpp
src/platform/dawn/render/: dawnCommandBuffer.cpp  dawnPassRenderer.cpp  dawnRenderPassRenderer.cpp  dawnRenderer.cpp
src/platform/dawn/resources/: dawnBindGroup.cpp  dawnBindGroupLayout.cpp  dawnBuffer.cpp  dawnDynamicBuffer.cpp  dawnFrameBuffer.cpp  dawnRenderPass.cpp  dawnRenderPassLayout.cpp  dawnResourceManager.cpp  dawnSampler.cpp  dawnShader.cpp  dawnTexture.cpp
src/renderer/render/: commands.cpp  drawStream.cpp  renderer.cpp  uniforms.cpp
